--- a/package.json
+++ b/package.json
@@ -17,7 +17,11 @@
     "vue-template-compiler": "^2.7.10"
   },
   "devDependencies": {
-    "@nuxt/types": "^2.15.8",
-    "@nuxt/typescript-build": "^2.1.0"
+    "@nuxt/types": "^2.18.1",
+    "@nuxt/typescript-build": "^2.1.0",
+    "node-sass": "^6.0.1",
+    "sass-loader": "^10.4.1",
+    "typescript": "^5.5.3",
+    "webpack": "^4.46.0"
   }
 }
